@@ -4,6 +4,9 @@
 1768.	[bug]		nsecnoexistnodata() could be called with a non-NSEC
 			rdataset. [RT #12907]
 
+1767.	[port]		Builds on IPv6 platforms without IPv6 Advanced API
+			support for (struct in6_pktinfo) failed.  [RT #13077]
+
 1765.	[bug]		configure --with-openssl=auto failed. [RT #12937]
 
 1764.	[bug]		dns_zone_replacedb failed to emit a error message
